chore: Update python and torch dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "3.10.*"
+python = ">=3.10.*"
+torch = "^2.3.0"
 omegaconf = "^2.3.0"
 tqdm = "^4.66.4"
 einops = "^0.8.0"
@@ -16,6 +17,7 @@ vocos = "^0.1.0"
 ipython = "^8.25.0"
 
 [tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.4"
 
 
 [build-system]
