chore: Update pynini dependency to version 2.1.5

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ einops = "^0.8.0"
 vector-quantize-pytorch = "^1.14.24"
 transformers = "^4.41.2"
 vocos = "^0.1.0"
+pynini = "2.1.5"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.25.0"
