--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 numpy<2.0.0
-omegaconf~=2.3.0
-torch~=2.1.0
+omegaconf>=2.3.0
+torch>=2.1.0
 tqdm
 vector_quantize_pytorch
-transformers~=4.41.1
+transformers>=4.41.1
 vocos
 IPython
 gradio
