feat(dvae): expose coef for customize
and unify coef of dvae & decoder

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ vocos
 IPython
 gradio
 python-dotenv
+pybase16384
 pynini==2.1.5; sys_platform == 'linux'
 WeTextProcessing; sys_platform == 'linux'
 nemo_text_processing; sys_platform == 'linux'
