optimize: spk_emb & generate & webui
fix: ipynb param not defined

--- a/.github/workflows/unitest.yml
+++ b/.github/workflows/unitest.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Test Install
         run: pip install .
 
+      - name: Install Dependencies
+        run: pip install -r requirements.txt
+
       - name: Run Test
         run: |
           echo "TODO"
