fix(webui): fallback to wav if ffmpeg not installed

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,4 @@ pynini==2.1.5; sys_platform == 'linux'
 WeTextProcessing; sys_platform == 'linux'
 nemo_text_processing; sys_platform == 'linux'
 av
+pydub
