fix: add param `ensure_non_empty` (fix #511)

--- a/.github/workflows/unitest.yml
+++ b/.github/workflows/unitest.yml
@@ -25,5 +25,4 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Run Test
-        run: |
-          echo "TODO"
+        run: tests/testall.sh
