optimize(workflow): not run on bot commits

--- a/.github/workflows/checksum.yml
+++ b/.github/workflows/checksum.yml
@@ -1,9 +1,7 @@
 name: Calculate and Sync SHA256
 on:
-  push:
-    branches:
-      - main
-      - dev
+  workflow_dispatch:
+
 jobs:
   checksum:
     runs-on: ubuntu-latest
