fix(workflow): pypi upload

--- a/.github/workflows/upload-pypi.yml
+++ b/.github/workflows/upload-pypi.yml
@@ -27,10 +27,9 @@ jobs:
 
       - name: Build Package
         env:
-          CHTTS_VER: $GITHUB_REF_NAME
+          CHTTS_VER: ${{ github.ref_name }}
         run: |
-          echo "Tag name from GITHUB_REF_NAME: $GITHUB_REF_NAME"
-          echo "Tag name from github.ref_name: ${{ github.ref_name }}"
+          echo "Release Tag: ${{ github.ref_name }}"
           python setup.py build_py
 
       - name: Upload Package
