fix(workflow): pyaudio install

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,4 @@ WeTextProcessing; sys_platform == 'linux'
 nemo_text_processing; sys_platform == 'linux'
 av
 pydub
-pyaudio
+pyaudio; sys_platform == 'linux'
