--- a/.github/workflows/unitest.yml
+++ b/.github/workflows/unitest.yml
@@ -20,6 +20,10 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+      
+      - name: Install Dependents
+        run: |
+          sudo apt-get install -y python3-pyaudio
 
       - name: Test Install
         run: pip install .
