fix(wrokflow): pull-format checkout

--- a/.github/workflows/checksum.yml
+++ b/.github/workflows/checksum.yml
@@ -6,10 +6,10 @@ jobs:
   checksum:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v4
 
       - name: Setup Go Environment
-        uses: actions/setup-go@master
+        uses: actions/setup-go@v5
 
       - name: Run RVC-Models-Downloader
         run: |
