--- a/.github/workflows/pull-format.yml
+++ b/.github/workflows/pull-format.yml
@@ -53,10 +53,9 @@ jobs:
     steps:
       - name: Checkout
         continue-on-error: true
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
-          ref: ${{ github.head_ref }}
-          fetch-depth: 0
+          ref: ${{ github.event.pull_request.head.sha }}
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
