--- a/.github/workflows/unitest.yml
+++ b/.github/workflows/unitest.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
 
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v4
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
