fix(workflow): make ci happy

--- a/.github/workflows/pull-format.yml
+++ b/.github/workflows/pull-format.yml
@@ -57,10 +57,8 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.sha }}
 
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.10
+      - name: Set up Python
+        uses: actions/setup-python@v5
 
       - name: Install Black
         run: pip install "black[jupyter]"
