--- a/.github/workflows/unitest.yml
+++ b/.github/workflows/unitest.yml
@@ -25,6 +25,11 @@ jobs:
         run: |
           sudo apt-get install -y portaudio19-dev python3-pyaudio
 
+      - name: Create venv
+        run: |
+          python3 -m venv .venv
+          source .venv/bin/activate
+
       - name: Test Install
         run: pip install .
 
