fix(ci): pip install through venv

--- a/.github/workflows/pull-format.yml
+++ b/.github/workflows/pull-format.yml
@@ -64,9 +64,12 @@ jobs:
         uses: actions/setup-python@v5
 
       - name: Create venv
+        run: python3 -m venv .venv
+
+      - name: Activate venv
         run: |
-          python3 -m venv .venv
-          source .venv/bin/activate
+          . .venv/bin/activate
+          echo PATH=$PATH >> $GITHUB_ENV
 
       - name: Install Black
         run: pip install "black[jupyter]"
