--- a/.github/workflows/unitest.yml
+++ b/.github/workflows/unitest.yml
@@ -26,9 +26,12 @@ jobs:
           sudo apt-get install -y portaudio19-dev python3-pyaudio
 
       - name: Create venv
+        run: python3 -m venv .venv
+
+      - name: Activate venv
         run: |
-          python3 -m venv .venv
-          source .venv/bin/activate
+          . .venv/bin/activate
+          echo PATH=$PATH >> $GITHUB_ENV
 
       - name: Test Install
         run: pip install .
